updated finsihed reddit tiles

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,23 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
+* {
+	box-sizing: border-box;	
+	font-family: Open Sans;
+}
+
 .header {
 	text-align: center;
+	font-family: Open Sans, Roboto;
 }
 
 .codeContainer {
 	background-color: #dee1e5;
 	width : 90%;
 	margin: 0 auto;
+	font-family: Consolas, Arial; 
+}
+
+pre {
+	font-family: monospace;
 }
