--- a/src/redditTiles/styles.css
+++ b/src/redditTiles/styles.css
@@ -27,3 +27,15 @@
 	font-weight: bold;
 	margin: 0 1em;
 }
+
+.tileContainer {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: center;
+}
+.tile {
+	flex: 1 1 auto;
+	width: 20%;
+	height: 20%;
+}
